# s4installer

./: Cargo.toml
src/: lib.rs  main.rs  subcommands.rs
src/subcommands/: install.rs  list.rs
